# fountain-app

./: CMakeLists.txt  Main.qml  bledevice.cpp  bledevice.h  main.cpp  singleimage.cpp  singleimage.h
Preview/: Praca dyplomowa - HMI do kurtyny wodnej.pptx
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml
assets/img/: preview.jfif
qml/components/: About.qml  Bluetooth.qml  DeviceMemoryImage.qml  Gallery.qml  Gallery.qml.autosave  Home.qml  Home.qml.autosave  Login.qml  Logs.qml  Menu.qml  PaintAnimation.qml  Settings.qml  Toolbar.qml
qml/components/gallery/: ImagePreview.qml  RowDelegate.qml
qml/components/settings/: Divider.qml  EmailDelegate.qml
qml/controls/: ColorPicker.qml  CustomButton.qml  CustomTextInput.qml  MenuButton.qml  ToolbarButton.qml
qml/utils/: ApiManager.qml  ImageInfo.qml  MyTheme.qml  WebSocketManager.qml
source/: singleimage.cpp  singleimage.h
